# AetherCore

./: .env  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AetherCore.bootstrap.manifest.json  CustomInstructions_STRICT.md  CustomInstructions_with_bootstrap_v3.yaml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANIFEST_UPDATES_SUMMARY.md  README.md  auth.py  cleanup_report.md  comprehensive_analysis.md  config.py  deploy.py  dev.env.example  final_verification.py  gateway.py  models.py  northflank.json  openapi_schema.json  package-lock.json  package.json  project_state.md  pyproject.toml  requirements.txt  server.js  skill_loader.py  skills_config.json  test_searchengine.py
.claude/: settings.local.json
.github/: .gitignore  .pre-commit-config.yaml  .prettierignore
AetherCore.Gateway/: .gitignore  DEPLOYMENT.md  DEPLOYMENT.template.md  Dockerfile  Procfile  auth.py  config.py  deploy.example.py  deploy_koyeb.example.py  dev.env  ecosystem.config.js  gateway.py  koyeb_deploy.example.sh  koyeb_deploy.ps1  models.py  openapi_schema.json  requirements.txt  server.js  skill_loader.py
AetherCore.System/: AetherCore.bootstrap.manifest.json  CustomInstructions_STRICT.md  CustomInstructions_with_bootstrap_v3.yaml  skill_framework.json  skill_output.json  skills_config.json
Aethercore.Gateway/: .env  .env.example  DEPLOYMENT.template.md  Dockerfile  auth.py  config.py  koyeb_deploy.example.ps1  koyeb_deploy.example.sh  koyeb_deploy.sh  package-lock.json  server.js  skill_loader.py
docs/: skill_framework.md
(+139 files in other folders)
